components/policies/pod-security-standards/baseline/restrict-sysctls/test/pod-bad.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    sysctls:
      - name: kernel.shm_next_id
        value: "4"
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    sysctls:
      - name: kernel.shm_rmid_forced
        value: "2"
      - name: kernel.shm_next_id
        value: "4"
---
