components/policies/pod-security-standards/baseline/restrict-sysctls/test/pod-good.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    sysctls:
      - name: kernel.shm_rmid_forced
        value: "2"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    sysctls:
      - name: net.ipv4.ip_local_port_range
        value: "31000    60999"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    sysctls:
      - name: net.ipv4.ip_unprivileged_port_start
        value: "2048"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    sysctls:
      - name: net.ipv4.tcp_syncookies
        value: "0"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    sysctls:
      - name: net.ipv4.ping_group_range
        value: "1   0"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod07
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    sysctls:
      - name: net.ipv4.ip_unprivileged_port_start
        value: "2048"
      - name: net.ipv4.ping_group_range
        value: "1   0"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod08
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    sysctls: []
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod09
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    sysctls:
      - name: net.ipv4.ip_local_reserved_ports
        value: "12345,54321"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod10
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    sysctls:
      - name: net.ipv4.tcp_keepalive_time
        value: "180"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod11
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    sysctls:
      - name: net.ipv4.tcp_fin_timeout
        value: "180"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod12
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    sysctls:
      - name: net.ipv4.tcp_keepalive_intvl
        value: "180"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod13
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    sysctls:
      - name: net.ipv4.tcp_keepalive_probes
        value: "180"
---
