components/policies/pod-security-standards/baseline/restrict-sysctls/test/kyverno-test.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-sysctls
policies:
  - ../policy.yaml
resources:
  - cronjob-bad.yaml
  - cronjob-good.yaml
  - deployment-bad.yaml
  - deployment-good.yaml
  - job-bad.yaml
  - job-good.yaml
  - pod-bad.yaml
  - pod-good.yaml
results:
  - kind: CronJob
    policy: restrict-sysctls
    isValidatingAdmissionPolicy: true
    resources:
      - badcronjob01
      - badcronjob02
    result: fail
  - kind: CronJob
    policy: restrict-sysctls
    isValidatingAdmissionPolicy: true
    resources:
      - goodcronjob01
      - goodcronjob02
      - goodcronjob03
      - goodcronjob04
      - goodcronjob05
      - goodcronjob06
      - goodcronjob07
    result: pass
  - kind: Deployment
    policy: restrict-sysctls
    isValidatingAdmissionPolicy: true
    resources:
      - baddeployment01
      - baddeployment02
    result: fail
  - kind: Deployment
    policy: restrict-sysctls
    isValidatingAdmissionPolicy: true
    resources:
      - gooddeployment01
      - gooddeployment02
      - gooddeployment03
      - gooddeployment04
      - gooddeployment05
      - gooddeployment06
      - gooddeployment07
    result: pass
  - kind: Job
    policy: restrict-sysctls
    isValidatingAdmissionPolicy: true
    resources:
      - badjob01
      - badjob02
    result: fail
  - kind: Job
    policy: restrict-sysctls
    isValidatingAdmissionPolicy: true
    resources:
      - goodjob01
      - goodjob02
      - goodjob03
      - goodjob04
      - goodjob05
      - goodjob06
      - goodjob07
    result: pass
  - kind: Pod
    policy: restrict-sysctls
    isValidatingAdmissionPolicy: true
    resources:
      - badpod01
      - badpod02
    result: fail
  - kind: Pod
    policy: restrict-sysctls
    isValidatingAdmissionPolicy: true
    resources:
      - goodpod01
      - goodpod02
      - goodpod03
      - goodpod04
      - goodpod05
      - goodpod06
      - goodpod07
      - goodpod08
      - goodpod09
      - goodpod10
      - goodpod11
      - goodpod12
      - goodpod13
    result: pass
